# cab-mcp

./: .gitignore  README.md  cab-config.sample.json  eslint.config.js  test_output.txt  test_output_final.txt  test_output_secret_reload.txt  test_output_updated.txt  vite.config.ts
.github/: copilot-instructions.md
plans/: mcp-http-streamable-implementation.md
src-react/: App.tsx  index.css  main.tsx
src-react/__tests__/: setup.ts
src-react/hooks/: index.ts  useMcpBridge.ts  useMeetingAgent.ts  useSessionAutoCleanup.ts  useSessionManager.ts  useSessionState.ts  useVoicePreview.ts
src-react/lib/: configUtils.ts  languageVoiceMap.ts  logger.ts  startupDiagnostics.ts  videoRenderer.ts  welcomeMessage.ts
src-react/services/: acsService.ts  agentMeetingOrchestrator.ts  agentServiceContainer.ts  analyticsService.ts  audioBridge.ts  azureFoundryAgentProvider.ts  captionAggregationService.ts  chatService.ts  configFileService.ts  copilotAuthService.ts  copilotStudioAgentProvider.ts  idleTimeoutService.ts  index.ts  intentDetectionService.ts  mcpHandlers.ts  sessionManager.ts  streamingAudioPlayer.ts  tokenService.ts  ttsService.ts  validationService.ts
src-react/stores/: agentProvidersStore.ts  appStore.ts  configStore.ts  index.ts  navigationStore.ts  preferencesStore.ts  sessionStore.ts
src-react/types/: agent-provider.ts  behavior.ts  index.ts  mcp.ts  session.ts  tts-provider.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config_file.rs  main.rs
src-tauri/src/mcp/: auth.rs  bridge.rs  mod.rs  server.rs  state.rs  tools.rs
(+26 files in other folders)
